[package]
name = "chia_plotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.2"
rayon = "1.5.1"
indicatif = "0.17"
peak_alloc = "0.2.1"
clap = {version="4.5.2", features=["derive"]}
ext-sort = { version = "^0.1.4", features = ["memory-limit"] }
deepsize = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"